# TrackingInvariants

./: .gitignore  MUJOCO_LOG.TXT  README.md
HLIP/control_py/: bezier.py  hlip_controller.py  main.py  poly.py
HLIP/kinematics_py/: adam_kinematics.py
HLIP/rsc/: config.yaml  track_inv_config.yaml
HLIP/rsc/models/: MJDATA.TXT  MJMODEL.TXT  adam2d.urdf  adam2d.xml  adam2d_lightlimbs copy.urdf  adam2d_lightlimbs.xml  adam2d_tsc.urdf  adam2d_tsc.xml
HLIP/simulation_py/: mujoco_interface.py
HLIP/utils/: CMakeLists.txt  logger.py
HLIP/utils/include/: utility_kinematics.h  utility_log.h  utility_math.h
HLIP/utils/src/: utility_kinematics.cpp  utility_log.cpp  utility_math.cpp
SetRepresentations/: set_representation.py  set_test.py
TrackingInvariants/: main.py  track_inv_config.yaml  tracking_invariant.py  tracking_invariant_parallel.py  visualize_IKerrors.py
